# FPV-drone-RL-agent

./: .gitignore  README.md  env.py  hover.py  main.py  pyproject.toml  test_hover.py  train.py
controller/: README.md  receive_telemetry.py  send_controll_commands_through_jack.py
drone_models/cf2x/: cf2x.urdf
drone_models/whoop/: whoop.urdf  whoop.yaml
elrs_rl_controller/: README.md  elrs_transmitter.py  receive_telemetry_from_pocket.py  send_controll_commands_through_jack.py  serial_connection.py
elrs_rl_controller/crsf/: frames.py
simulation/: README.md  hover.py  new_test_hover.py  pyproject.toml  radio_controller.py  test_hover.py  throttle.py  train_hover.py  yaw.py
simulation/drone_models/cf2x/: cf2x.urdf  cf2x.yaml
simulation/ppo_drone_tensorboard/PPO_1/: events.out.tfevents.1761757230.samuel.473703.0
simulation/tensorboard/hover_przeskalowane_akcje/: events.out.tfevents.1764345436.grzetan.196054.0
simulation/tensorboard/hover_przeskalowane_akcje_smooth/: events.out.tfevents.1764345956.grzetan.202459.0
