[project]
name = "fpv-drone-rl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.1.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pyflyt>=0.21.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
]
